--- a/src/templates/admin/admin_home.html
+++ b/src/templates/admin/admin_home.html
@@ -120,14 +120,14 @@
                                 <div class="row align-items-center">
                                     <div class="col-12">
                                         <h4 class="text-c-purple">{{New.count}}</h4>
-                                        <h6 class="text-muted m-b-0">New Booking</h6>
+                                        <h6 class="text-muted m-b-0">New Enrolled</h6>
                                     </div>
                                 </div>
                             </div>
                             <div class="card-footer bg-c-purple">
                                 <div class="row align-items-center">
                                     <div class="col-9">
-                                        <a class="text-white m-b-0" href="/new_booking/?action=New">View Details</a>
+                                        <a class="text-white m-b-0" href="/new_enrolled/?action=New">View Details</a>
                                     </div>
                                 </div>
                             </div>
@@ -147,7 +147,7 @@
                             <div class="card-footer bg-c-green">
                                 <div class="row align-items-center">
                                     <div class="col-9">
-                                        <a class="text-white m-b-0" href="/new_booking/?action=Partial">View Details</a>
+                                        <a class="text-white m-b-0" href="/new_enrolled/?action=Partial">View Details</a>
                                     </div>
                                 </div>
                             </div>
@@ -167,7 +167,7 @@
                             <div class="card-footer bg-c-red">
                                 <div class="row align-items-center">
                                     <div class="col-9">
-                                        <a class="text-white m-b-0" href="/new_booking/?action=Full">View Details</a>
+                                        <a class="text-white m-b-0" href="/new_enrolled/?action=Full">View Details</a>
                                     </div>
                                 </div>
                             </div>
