--- a/src/templates/admin/new_enroll.html
+++ b/src/templates/admin/new_enroll.html
@@ -50,45 +50,66 @@
       background-color:#165d5d!important;
     }
 </style>
-<!-- Page-header end -->
-<div class="page-wrapper">
-    <!--page-content-wrapper-->
-    <div class="page-content-wrapper">
-        <br>
-        <div class="page-content">
-            <center><h3>Booking Report</h3></center>
-            <hr>
-            <div class="card">
-                <div class="card-body">
-                    <form action="" method="post">
-                        {% csrf_token %}
-                        <div class="mb-3">
-                            <label class="form-label">From Date:</label>
-                            <input type="date" class="form-control" name="fromdate" value="{{fromdate}}" required>
-                        </div>
-                        <div class="mb-3">
-                            <label class="form-label">To Date:</label>
-                            <input type="date" class="form-control" name="todate" value="{{todate}}" required>
-                        </div>
-                        <button type="submit" class="btn btn-primary">Submit</button>
-                    </form>
+<!-- Page-header start -->
+<div class="page-header">
+    <div class="page-block">
+        <div class="row align-items-center">
+            <div class="col-md-8">
+                <div class="page-header-title">
+                    <h5 class="m-b-10">{{request.GET.action}} Enrolled Package</h5>
+                    <p class="m-b-0">Welcome to Gym Management System</p>
                 </div>
-                {% if data %}
+            </div>
+            <div class="col-md-4">
+                <ul class="breadcrumb-title">
+                    <li class="breadcrumb-item">
+                        <a href="{% url 'admin_home' %}"> <i class="fa fa-home"></i> </a>
+                    </li>
+                    <li class="breadcrumb-item"><a href="">Enrolled Package</a>
+                    </li>
+                    <li class="breadcrumb-item"><a href="">{{request.GET.action}} Enrolled class</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </div>
+</div>
+<!-- Page-header end -->
 
-                <div class="container">
-                    <h4>B/w Dates {% if request.GET.type %}{{request.GET.type}}{% elif request.GET.action
-                        %}{{request.GET.action}}{% else %}report{% endif %} from "{{fromdate}}" to "{{todate}}"</h4>
+<div class="pcoded-inner-content">
+    <!-- Main-body start -->
+    <div class="main-body">
+        <div class="page-wrapper">
 
-                    <div class="card-block table-border-style">
-                        <div class="table-responsive">
-                            <table class="table">
-                                <thead>
-                                <tr>
+            <!-- Page body start -->
+            <div class="page-body">
+                <div class="row">
+
+
+                    <div class="col-md-12">
+                        <div class="card">
+                            <div class="card-block">
+                                <div class="card-header">
+                                    <h5>{{request.GET.action}} Enrolled</h5>
+                                    <div class="card-header-right">
+                                        <ul class="list-unstyled card-option">
+                                            <li><i class="fa fa fa-wrench open-card-option"></i></li>
+                                            <li><i class="fa fa-window-maximize full-card"></i></li>
+                                            <li><i class="fa fa-minus minimize-card"></i></li>
+                                            <li><i class="fa fa-refresh reload-card"></i></li>
+                                        </ul>
+                                    </div>
+                                </div>
+                                <div class="card-block table-border-style">
+                                    <div class="table-responsive">
+                                        <table class="table">
+                                            <thead>
+                                            <tr>
                                                 <th>#</th>
-                                                <th>Booking Id</th>
+                                                <th>Enroll Id</th>
                                                 <th>Name</th>
                                                 <th>Email</th>
-                                                <th>Booking Date</th>
+                                                <th>Enroll Date</th>
                                                 <th>Package Name</th>
                                                 <th>Title</th>
                                                 <th>Action</th>
@@ -107,32 +128,29 @@
                                                  <td>{{i.creationdate}}</td>
                                                 <td>{{i.package.packagename}}</td>
                                                 <td>{{i.package.titlename}}</td>
-                                                <td><a href="{% url 'booking_detail' i.id %}"
+                                                <td><a href="{% url 'enrolled_detail' i.id %}"
                                                        class="btn btn-primary">View</a> |
-                                                    <a href="{% url 'deleteBooking' i.id %}"
+                                                    <a href="{% url 'deleteenrolled' i.id %}"
                                                        onclick="return confirm('Are you sure to Delete')"
                                                        class="btn btn-danger">Delete</a>
                                                 </td>
                                             </tr>
                                             {% endfor %}
-                                </tbody>
-                            </table>
+                                            </tbody>
+                                        </table>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
-                    {% elif data2 %}
 
-                    <h3 align="center">Data not found</h3>
-
-                    {% endif %}
                 </div>
             </div>
         </div>
-
     </div>
+    <!-- Main-body end -->
+    <div id="styleSelector"></div>
 </div>
-
-<!-- Main-body end -->
-<div id="styleSelector"></div>
  <script>
     function togglePassword(element_id, btnId){
       var elementData = document.getElementById(element_id);
