--- a/src/templates/enrolled_history.html
+++ b/src/templates/enrolled_history.html
@@ -73,7 +73,7 @@
                     <a href="#schedule" class="nav-item nav-link ">Schedules</a>
                     <a href="#contact-us" class="nav-item nav-link">Contact</a>
                     {% if request.user.is_authenticated %}
-                    <a href="/booking_history/" class="nav-item nav-link">Booking History</a>
+                    <a href="/enrolled_history/" class="nav-item nav-link">Enrolled History</a>
                     {% else %}
                     <a href="#admin"><button style="color:red" class="nav-item nav-link">Admin</button></a>
                     {% endif %}
@@ -86,14 +86,14 @@
 <body>
 <!-- ***** Admin Area Starts ***** -->
 <section class="section" id="admin">
-    <h3 class="text-center text-danger">Booking History</h3>
+    <h3 class="text-center text-danger">Enrolled History</h3>
     <hr/>
     <div class="table-responsive" align="center">
 			<table id="example" class="table table-striped table-bordered" style="width:80%">
 				<thead>
 				<tr>
 					<th>S.NO</th>
-					<th>Booking Date</th>
+					<th>Enrolled Date</th>
 					<th>Title</th>
 					<th>Package Duration</th>
 					<th>Price</th>
@@ -115,7 +115,7 @@
 					<td>{{i.package.category.categoryname}}</td>
                     <td>{{i.package.packagename}}</td>
 					<td>
-						 <a href="{% url 'booking_detail' i.id %}">
+						 <a href="{% url 'enrolled_detail' i.id %}">
 							 <button type="button" class="btn btn-primary">view details</button>
 						 </a>
 					</td>
