--- a/src/templates/header.html
+++ b/src/templates/header.html
@@ -71,7 +71,7 @@
                     <a href="#trainers" class="nav-item nav-link ">Pricing Plan</a>
                     <a href="#contact-us" class="nav-item nav-link">Contact</a>
                     {% if request.user.is_authenticated %}
-                    <a href="/booking_history/" class="nav-item nav-link">Booking History</a>
+                    <a href="/enrolled_history/" class="nav-item nav-link">Enrolled History</a>
                     {% else %}
                     <a href="/login"><button style="color:red" class="nav-item nav-link">Login</button></a>
                     {% endif %}
