--- a/src/templates/user_booking_detail.html
+++ b/src/templates/user_booking_detail.html
@@ -122,7 +122,7 @@
                     <a href="#schedule" class="nav-item nav-link ">Schedules</a>
                     <a href="#contact-us" class="nav-item nav-link">Contact</a>
                     {% if request.user.is_authenticated %}
-                    <a href="/booking_history/" class="nav-item nav-link">Booking History</a>
+                    <a href="/enrolled_history/" class="nav-item nav-link">Enrolled History</a>
                     {% else %}
                     <a href="#admin"><button style="color:red" class="nav-item nav-link">Admin</button></a>
                     {% endif %}
@@ -138,7 +138,7 @@
         <div class="row">
             <div class="col-lg-6 offset-lg-3">
                 <div class="section-heading dark-bg">
-                    <h2>Booking <em>History</em></h2>
+                    <h2>enrolled <em>History</em></h2>
                 </div>
             </div>
         </div>
@@ -150,7 +150,7 @@
                         <div class="card-body">
                             <table id="example" class="table table-bordered table-striped">
                                 <tr>
-                                    <th style="color:purple">Booking Date:</th>
+                                    <th style="color:purple">enrolled Date:</th>
                                     <td style="color:blue">{{data.package.creationdate}}</td>
                                     <th style="color:purple">Name:</th>
                                     <td style="color:blue">{{data.register.user.first_name}} {{data.register.user.last_name}}</td>
