--- a/src/templates/user_login.html
+++ b/src/templates/user_login.html
@@ -16,7 +16,7 @@
         <div class="d-flex flex-wrap w-75 bg-white shadow rounded overflow-hidden">
             <div class="w-50 d-none d-md-block" style="background: url('{% static "assets/images/adminlogin.jpg" %}') center/cover no-repeat;"></div>
             <div class="w-50 p-4 d-flex flex-column justify-content-center">
-                <h3 class="text-center text-dark mb-3">Sign In</h3>
+                <h3 class="text-center text-dark mb-3">Member Sign In</h3>
                 <form method="post" class="needs-validation" novalidate>
                     {% csrf_token %}
                     <div class="mb-3">
