--- a/src/templates/user_change_password.html
+++ b/src/templates/user_change_password.html
@@ -1,164 +1,84 @@
+{% extends 'header.html' %}
 {% load static %}
-<html lang="en">
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <link href="https://fonts.googleapis.com/css?family=Poppins:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i&display=swap" rel="stylesheet">
 
-    <title>Gym Management System</title>
+{% block main_content %}
 
-    <!-- Additional CSS Files -->
-    <link rel="stylesheet" type="text/css" href="{% static 'assets/css/bootstrap.min.css' %}">
+<style>
+    .change-password-container {
+        background-color: #f8f9fa;
+        padding: 30px;
+        border-radius: 10px;
+        box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
+        margin-top: 20px;
+    }
 
-    <link rel="stylesheet" type="text/css" href="{% static 'assets/css/font-awesome.css' %}">
+    .change-password-heading {
+        color: #343a40;
+        margin-bottom: 30px;
+        text-align: center;
+    }
 
-    <link rel="stylesheet" href="{% static 'assets/css/templatemo-training-studio.css' %}">
+    .form-group {
+        margin-bottom: 20px;
+    }
 
-</head>
+    .form-control {
+        border-radius: 5px;
+        padding: 12px;
+        border: 1px solid #ced4da;
+    }
 
-<!-- ***** Preloader Start ***** -->
-<div id="js-preloader" class="js-preloader">
-    <div class="preloader-inner">
-        <span class="dot"></span>
-        <div class="dots">
-            <span></span>
-            <span></span>
-            <span></span>
-        </div>
-    </div>
-</div>
-<!-- ***** Preloader End ***** -->
+    .form-control:focus {
+        outline: none;
+        border-color: #80bdff;
+        box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.25);
+    }
 
+    .update-button {
+        background-color: #007bff;
+        color: white;
+        border: none;
+        padding: 14px 25px;
+        border-radius: 5px;
+        cursor: pointer;
+        transition: background-color 0.3s ease;
+        width: 100%;
+    }
 
-<!-- Topbar Start -->
-<div class="container-fluid py-3 px-lg-5 d-none d-lg-block">
-    <div class="row">
-        {% if request.user.is_authenticated %}
-        <div class="col-md-6 text-center text-lg-left mb-2 mb-lg-0">
-            <div class="d-inline-flex align-items-center">
-                <a class="text-body pr-3" href="/user_profile/"><i style="color:red" class="fa fa-user mr-2"></i>My Profile</a>
-                <a class="text-body px-3" href="/user_change_password/"><i style="color:red" class="fa fa-unlock-alt mr-2"></i>Change Password</a>
-                <a class="text-body px-3" href="/user_logout/"><i style="color:red" class="fa fa-envelope mr-2"></i>Logout</a>
-            </div>
-        </div>
-        {% else %}
-        <div class="col-md-12 text-center text-lg-right">
-            <div class="d-inline-flex align-items-center">
-                <a class="text-body px-3"  href="/user_login/">
-                    <i style="color:red" class="fa fa-user mr-2"></i>User Login</a>
-            </div>
-        </div>
-        {% endif %}
-    </div>
-</div>
-<!-- Topbar End -->
-<!-- Navbar Start -->
-<div class="container-fluid position-relative nav-bar p-0">
-    <div class="position-relative px-lg-5" style="z-index: 9;">
-        <nav class="navbar navbar-expand-lg bg-secondary navbar-dark py-3 py-lg-3 pl-3 pl-lg-5">
-            <a href="" >
-                <h2 class="text-uppercase text-warning mb-1">Gym <span class="text-white">Management System</span>
-                </h2>
-            </a>
-            <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse justify-content-between px-3" id="navbarCollapse">
-                <div class="navbar-nav ml-auto py-0">
-                    <a href="/" class="nav-item nav-link active">Home</a>
-                    <a href="#features" class="nav-item nav-link">About</a>
-                    <a href="#our-classes" class="nav-item nav-link">Classes</a>
-                    <a href="#schedule" class="nav-item nav-link ">Schedules</a>
-                    <a href="#contact-us" class="nav-item nav-link">Contact</a>
-                    {% if request.user.is_authenticated %}
-                    <a href="/booking_history/" class="nav-item nav-link">Booking History</a>
-                    {% else %}
-                    <a href="#admin"><button style="color:red" class="nav-item nav-link">Admin</button></a>
-                    {% endif %}
-                </div>
-            </div>
-        </nav>
-    </div>
-</div>
-<!-- Navbar End -->
-<body>
-<!-- ***** Admin Area Starts ***** -->
-<section class="section" id="admin">
-    <h3 class="text-center text-danger">User Change Password</h3>
-    <hr/>
-    <div class="container-fluid mt-3">
-        <div class="row">
+    .update-button:hover {
+        background-color: #0056b3;
+    }
+</style>
 
-            <div class="col-lg-12 col-md-12 col-xs-12">
+<section class="section" id="change-password">
+    <div class="container change-password-container">
+        <h3 class="change-password-heading">User Change Password</h3>
+        <hr/>
+        <div class="row justify-content-center">
+            <div class="col-lg-8 col-md-10 col-sm-12">
                 <div class="admin-form">
                     <form method="post" action="" enctype="multipart/form-data">
                         {% csrf_token %}
-                        <div class="row">
-                            <div class="col-md-12 col-sm-12">
-                                <fieldset>
-                                    <input type="password" name="pwd3" placeholder="Current Password">
-                                </fieldset>
-                            </div>
-                            <div class="col-md-12 col-sm-12">
-                                <fieldset>
-                                    <input type="password" name="pwd2" placeholder="New Password">
-                                </fieldset>
-                            </div>
-
-                            <div class="col-md-12 col-sm-12">
-                                <fieldset>
-                                    <input type="password" name="pwd1" placeholder="Confirm Password">
-                                </fieldset>
-                            </div>
-
-                            <div class="col-lg-12">
-                                <fieldset>
-                                    <button type="submit" class="main-button" href="">Update</button>
-                                </fieldset>
-                            </div>
+                        <div class="form-group">
+                            <label for="current_password">Current Password</label>
+                            <input type="password" class="form-control" id="current_password" name="pwd3" placeholder="Current Password" required>
+                        </div>
+                        <div class="form-group">
+                            <label for="new_password">New Password</label>
+                            <input type="password" class="form-control" id="new_password" name="pwd2" placeholder="New Password" required>
                         </div>
 
+                        <div class="form-group">
+                            <label for="confirm_password">Confirm Password</label>
+                            <input type="password" class="form-control" id="confirm_password" name="pwd1" placeholder="Confirm Password" required>
+                        </div>
+
+                        <button type="submit" class="btn update-button">Update Password</button>
                     </form>
                 </div>
             </div>
         </div>
     </div>
 </section>
-<!-- ***** Footer Start ***** -->
-<footer>
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-12">
-                <p>Copyright &copy;
-                    <script>document.write(new Date().getFullYear());</script>
-                    Gym Management System
-                </p>
-            </div>
-        </div>
-    </div>
-</footer>
 
-<!-- jQuery -->
-<script src="{% static 'assets/js/jquery-2.1.0.min.js' %}"></script>
-
-<!-- Bootstrap -->
-<script src="{% static 'assets/js/popper.js' %}"></script>
-<script src="{% static 'assets/js/bootstrap.min.js' %}"></script>
-
-<!-- Plugins -->
-<script src="{% static 'assets/js/scrollreveal.min.js' %}"></script>
-<script src="{% static 'assets/js/waypoints.min.js' %}"></script>
-<script src="{% static 'assets/js/jquery.counterup.min.js' %}"></script>
-<script src="{% static 'assets/js/imgfix.min.js' %}"></script>
-<script src="{% static 'assets/js/mixitup.js' %}"></script>
-<script src="{% static 'assets/js/accordions.js' %}"></script>
-
-<!-- Global Init -->
-<script src="{% static 'assets/js/custom.js' %}"></script>
-
-</body>
-</html>
-
-
+{% endblock %}
