--- a/src/templates/admin/classlist.html
+++ b/src/templates/admin/classlist.html
@@ -105,9 +105,29 @@
                         <a href="{% url 'edit_class' class.id %}" class="btn btn-edit">
                             <i class="fa fa-edit"></i> Edit
                         </a>
-                        <a href="{% url 'delete_class' class.id %}" class="btn btn-delete" onclick="return confirm('Are you sure you want to delete this class?');">
+                        <!-- Trigger Modal -->
+                        <button type="button" class="btn btn-delete" data-bs-toggle="modal" data-bs-target="#deleteModal{{ class.id }}">
                             <i class="fa fa-trash"></i> Delete
-                        </a>
+                        </button>
+
+                        <!-- Modal -->
+                        <div class="modal fade" id="deleteModal{{ class.id }}" tabindex="-1" aria-labelledby="deleteModalLabel{{ class.id }}" aria-hidden="true">
+                            <div class="modal-dialog modal-dialog-centered">
+                                <div class="modal-content">
+                                    <div class="modal-header bg-danger text-white">
+                                        <h5 class="modal-title" id="deleteModalLabel{{ class.id }}">Delete Class</h5>
+                                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                    </div>
+                                    <div class="modal-body">
+                                        Are you sure you want to delete the class <strong>{{ class.name }}</strong>?
+                                    </div>
+                                    <div class="modal-footer">
+                                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                                        <a href="{% url 'delete_class' class.id %}" class="btn btn-danger">Delete</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </td>
                 </tr>
                 {% empty %}
@@ -125,5 +145,8 @@
         </div>
     </div>
 </div>
+
+<!-- Bootstrap 5 JS (for modals to work) -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
 {% endblock %}
