--- a/src/templates/trainerheader.html
+++ b/src/templates/trainerheader.html
@@ -13,11 +13,67 @@
 
     <!-- Additional CSS Files -->
     <link rel="stylesheet" type="text/css" href="{% static 'assets/css/bootstrap.min.css' %}">
-
     <link rel="stylesheet" type="text/css" href="{% static 'assets/css/font-awesome.css' %}">
-
     <link rel="stylesheet" href="{% static 'assets/css/templatemo-training-studio.css' %}">
-
+    <style>
+        /* Dropdown styles */
+        .dropdown {
+            position: relative;
+            display: inline-block;
+        }
+        
+        .dropdown-toggle {
+            cursor: pointer;
+        }
+        
+        .dropdown-menu {
+            display: none;
+            position: absolute;
+            right: 0;
+            background-color: #343a40;
+            min-width: 200px;
+            box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+            z-index: 1;
+            border-radius: 0;
+            border: none;
+            padding: 0;
+        }
+        
+        .dropdown:hover .dropdown-menu {
+            display: block;
+            animation: fadeIn 0.3s;
+        }
+        
+        @keyframes fadeIn {
+            from { opacity: 0; transform: translateY(-10px); }
+            to { opacity: 1; transform: translateY(0); }
+        }
+        
+        .dropdown-item {
+            color: white;
+            padding: 12px 16px;
+            text-decoration: none;
+            display: block;
+            transition: all 0.3s;
+        }
+        
+        .dropdown-item:hover {
+            background-color: #495057;
+            color: #ffc107;
+            padding-left: 20px;
+        }
+        
+        .dropdown-item i {
+            margin-right: 10px;
+            width: 20px;
+            text-align: center;
+        }
+        
+        .dropdown-divider {
+            border-top: 1px solid #495057;
+            margin: 0;
+        }
+    </style>
 </head>
 
 <body>
@@ -35,23 +91,6 @@
 </div>
 <!-- ***** Preloader End ***** -->
 
-
-<!-- Topbar Start -->
-<div class="container-fluid py-3 px-lg-5 d-none d-lg-block">
-    <div class="row">
-        {% if request.user.is_authenticated %}
-        <div class="col-md-6 text-center text-lg-left mb-2 mb-lg-0">
-            <div class="d-inline-flex align-items-center">
-                <a class="text-body pr-3" href="/user_profile/"><i style="color:red" class="fa fa-user mr-2"></i>My Profile</a>
-                <a class="text-body px-3" href="/user_change_password/"><i style="color:red" class="fa fa-unlock-alt mr-2"></i>Change Password</a>
-                <a class="text-body px-3" href="/user_logout/"><i style="color:red" class="fa fa-envelope mr-2"></i>Logout</a>
-            </div>
-        </div>
-  
-        {% endif %}
-    </div>
-</div>
-<!-- Topbar End -->
 <!-- Navbar Start -->
 <div class="container-fluid position-relative nav-bar p-0">
     <div class="position-relative px-lg-5" style="z-index: 9;">
@@ -66,14 +105,29 @@
             <div class="collapse navbar-collapse justify-content-between px-3" id="navbarCollapse">
                 <div class="navbar-nav ml-auto py-0">
                     <a href="#" class="nav-item nav-link active">Home</a>
-                    <a href="#features" class="nav-item nav-link">About</a>
-                    <a href="#our-classes" class="nav-item nav-link">Classes</a>
+                    <a href="#trainer_page" class="nav-item nav-link">Classes</a>
                     <a href="#chat" class="nav-item nav-link">Chats</a>
                     <a href="#contact-us" class="nav-item nav-link">Contact</a>
                     {% if request.user.is_authenticated %}
-                    
+                    <div class="nav-item dropdown ml-lg-3">
+                        <a class="nav-link dropdown-toggle text-warning" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            <i class="fa fa-user mr-1"></i> {{ request.user.username }}
+                        </a>
+                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <a class="dropdown-item" href="/user_profile/">
+                                <i class="fa fa-id-card"></i> My Profile
+                            </a>
+                            <a class="dropdown-item" href="/user_change_password/">
+                                <i class="fa fa-key"></i> Change Password
+                            </a>
+                            <div class="dropdown-divider"></div>
+                            <a class="dropdown-item" href="/user_logout/">
+                                <i class="fa fa-sign-out-alt"></i> Logout
+                            </a>
+                        </div>
+                    </div>
                     {% else %}
-                    <a href="/login"><button style="color:red" class="nav-item nav-link">Login</button></a>
+                    <a href="/login" class="nav-item nav-link" style="color: red;">Login</a>
                     {% endif %}
                 </div>
             </div>
@@ -86,7 +140,6 @@
     {%block main_content%}
     {%endblock%}
 </div>
-
 
 <!-- ***** Contact Us Area Starts ***** -->
 <section class="section" id="contact-us">
@@ -145,7 +198,6 @@
         </div>
     </div>
 </footer>
-
 
 <!-- jQuery -->
 <script src="{% static 'assets/js/jquery-2.1.0.min.js' %}"></script>
