--- a/src/templates/admin/send_notification.html
+++ b/src/templates/admin/send_notification.html
@@ -3,10 +3,29 @@
 
 {% block main %}
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-
-<div class="container mt-5 mb-5">
-    <div class="card shadow-lg p-4">
-        <h3 class="text-center text-warning mb-4">Send Email Notification</h3>
+<div class="page-header">
+    <div class="page-block">
+        <div class="row align-items-center">
+            <div class="col-md-8">
+                <div class="page-header-title">
+                    <h5 class="m-b-10">Send Email Notification</h5>
+                    <p class="m-b-0">Welcome to Gym Management System</p>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <ul class="breadcrumb-title">
+                    <li class="breadcrumb-item">
+                        <a href="{% url 'admin_home' %}"> <i class="fa fa-home"></i> </a>
+                    </li>
+                    <li class="breadcrumb-item"><a href="">Send Notification</a>
+                    </li>
+                    <li class="breadcrumb-item"><a href="">Send Email Notification</a></li>
+                    
+                </ul>
+            </div>
+        </div>
+    </div>
+</div>
         <form method="POST" action="{% url 'send_notification' %}">
             {% csrf_token %}
 
